--- a/views/demo.pug
+++ b/views/demo.pug
@@ -4,7 +4,7 @@ html
         meta(charset='UTF-8')
         meta(name='viewport' content='width=device-width, initial-scale=1.0')
         // displays site properly based on user's device
-        link(rel='icon' type='png' sizes='32x32' href='../static/favicon-32x32.png')
+        link(rel='icon' type='ico' sizes='32x32' href='../static/favicon.ico')
         title Frontend Mentor | Advice generator app
         link(rel='stylesheet' href='../static/style.css')
         
